<?xml version="1.0"?>
<package format="2">
  <name>ros2cs_examples</name>
  <version>2.0.0</version>
  <description>Package containing examples of how to use the ros2cs API.</description>
  <maintainer email="adam.dabrowski@robotec.ai">Adam Dabrowski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_generator_cs</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_depend>example_interfaces</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>ros2cs_core</build_depend>
  <build_depend>ros2cs_common</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>ros2cs_core</exec_depend>
  <exec_depend>ros2cs_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
