<?xml version="1.0"?>
<package format="2">
  <name>ros2cs_examples</name>
  <version>2.0.0</version>
  <description>Package containing examples of how to use the ros2cs API.</description>
  <maintainer email="adam.dabrowski@robotec.ai">Adam Dabrowski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_generator_cs</buildtool_depend>

  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <depend>ros2cs_core</depend>
  <depend>ros2cs_common</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
